6-Sep-2005:
    - XSLT execution tracing added
    - Verifier task added

24-Aug-2005:
    - fixed bug in XPathFactory: now it correctly processes situation when javax.xml.xpath.XPathFactory
      instance cannot be created
    - fixed bug in XMLComparator: now it will compare only specified node
      and its children and will not proceed with node siblings

11-Aug-2005: new methods added into the JuxyTestCase:
    - JuxyTestCase.parse(String)
    - JuxyTestCase.print(org.w3c.dom.Document)
    - JuxyTestCase.assertXMLEquals(String, String)

10-Aug-2005: Juxy 0.6.7 released