@@ -9,7 +9,7 @@ import org.w3c.dom.traversal.TreeWalker;
 import java.util.Arrays;
 
 /**
- * $Id: DocumentsAssertionError.java,v 1.5 2005-08-10 08:57:18 pavelsher Exp $
+ * $Id: DocumentsAssertionError.java,v 1.6 2005-09-12 07:43:47 pavelsher Exp $
  * <p/>
  * @author Pavel Sher
  */
@@ -56,6 +56,9 @@ public class DocumentsAssertionError extends AssertionFailedError {
 
     private boolean hasParentElement(Node startFrom)
     {
+        if (startFrom.getNodeType() == Node.DOCUMENT_NODE)
+            return false;
+        
         return startFrom.getParentNode() != null && startFrom.getParentNode().getNodeType() == Node.ELEMENT_NODE;
     }
 
